<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.master.testownik13.Menu">

    <Button
        style="@style/Button"
        android:text="@string/button_exit"
        android:id="@+id/button_exit"
        android:layout_alignParentBottom="true"
        android:onClick="onClick_exit"
        android:background="?attr/colorButtonNormal"
        android:textColor="?android:attr/textColorPrimaryInverse" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textStyle="bold"
        android:textSize="70dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="?attr/colorButtonNormal" />

    <Button
        style="@style/Button"
        android:text="@string/button_author"
        android:id="@+id/button_author"
        android:onClick="onClick_author"
        android:background="?attr/colorButtonNormal"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:layout_above="@+id/button_exit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Button"
        android:text="@string/button_start"
        android:id="@+id/button_start"
        android:onClick="onClick_start"
        android:background="?attr/colorButtonNormal"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:layout_above="@+id/button_settings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Button"
        android:text="@string/button_settings"
        android:id="@+id/button_settings"
        android:onClick="onClick_settings"
        android:background="?attr/colorButtonNormal"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:layout_above="@+id/button_author"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
