<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.master.testownik13.Settings"
    >


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch2"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:onClick="onClick_switch"
        android:textSize="18dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:text="@string/button_save"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:id="@+id/button5"
        style="@style/Button"
        android:onClick="onClick_saveSettings"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:background="?attr/colorButtonNormal" />

    <Spinner
        android:id="@+id/spinner2"

        android:layout_row="1"
        android:layout_column="1"

        android:layout_height="40dp"

        android:dropDownWidth="40dp"
        android:entries="@array/settings_number"
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:textColor="?android:textColorSecondaryInverse"
        android:foregroundGravity="center_vertical|fill_horizontal" />

    <Spinner
        android:id="@+id/spinner1"

        android:layout_gravity="center"

        android:layout_row="0"
        android:layout_column="1"

        android:layout_width="80dp"
        android:layout_height="40dp"

        android:dropDownWidth="40dp"
        android:entries="@array/settings_number"

        android:textColor="?android:attr/textColorSecondaryInverse"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:onClick="onClick_switch"
        android:layout_marginRight="15dp"/>

    <TextView
        android:text="@string/settings_normal_number"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        style="@style/small_text"
        android:textSize="16dp"
        android:gravity="center"
        android:textColor="?android:textColorSecondaryInverse"
        />

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/settings_textNightMode"
        style="@style/small_text"
        android:layout_gravity="top"
        android:textSize="16dp"
        android:gravity="top"
        android:textColor="?android:textColorSecondaryInverse"
        />

    <TextView
        android:text="@string/settings_wrong_number"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/textView2"
        style="@style/small_text"
        android:layout_gravity="center_vertical"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:textColor="?android:textColorSecondaryInverse"
        />

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_height="40dp"
        android:id="@+id/settings_textSounds"
        style="@style/small_text"
        android:layout_gravity="center_vertical"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:layout_width="200dp"
        android:textColor="?android:textColorSecondaryInverse"/>

</GridLayout>
